2009-12-07  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (format-region): Add (format-region).

2009-12-06  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (move-line-up): Add (move-line-up).
	(move-line-down): Add (move-line-down).

2009-12-05  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (gud-kill): Add (gud-kill).
	(gud-kill): Improve (gud-kill).

2009-12-04  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (gdb-or-gud-go): Add (gdb-or-gud-go).
	(gud-break-remove): Add (gud-break-remove).

	* init-site.el: In terminal, don't active highlight-change-mode.

	* init-misc.el: In terminal, don't active highlight-sysbol-mode.

	* init-basic.el ([f6]): Bind f6 to grep-cursor.

2009-12-03  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add doc-mode.

	* init-basic.el: Bind C-tab to (switch-to-buffer (other-buffer)).

	* init-misc.el (require): Add window-numbering.

	* init-basic.el: Bind gud keys.

2009-12-02  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Open ac-source-emacs-lisp-features.

2009-12-01  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add global-highlight-symbol-mode.
	: Update auto-complete to 0.3.0beta.
	: (setq ac-trigger-commands '(self-insert-command c-electric-lt-gt)).

	* init-basic.el ([C-f4]): Bind C-f4 to 'kill-this-buffer.
	([f6]): Bind f6 to '(occur "TODO").
	([C-f6]): Bind C-f6 to '(brep "grep -irn 'TODO' .").

	* init-misc.el ([C-f7]): Bind C-f7 to 'smart-compile.

	* init-basic.el: (setq mouse-drag-copy-region nil).
	([f4]): Bind f4 && S-f4 to 'next-error && 'previous-error.
	([f5]): Bind f5 to 'gdb.
	([f7]): Bind f7 to 'compile.

2009-11-27  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add ascii.el.
	Add ifdef.el.

2009-11-26  Meteor Liu  <meteor1113@gmail.com>

	* lisp/recent-jump.el: Add.

2009-11-25  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Close global-hl-line-mode.

	* init-misc.el (highlight-symbol): Add highlight-symbol setting.

	* lisp/highlight-symbol.el: Add.
